Add arrow flags to deleteTable.sh